<resources>
    <string name="app_name">DataBaseProject</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Name:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="number_of_courses"># of Courses</string>
    <string name="credits">Credits:</string>
    <string name="number_of_students"># of Students</string>
    <string name="title_activity_link_student">Student Assignments</string>
    <string name="done">Done</string>
    <string name="credits_title">Credits:</string>
    <string name="main_activity_title">Tables</string>
</resources>
